# QThreadWithReturn

./: LICENSE  README.md  pyproject.toml  pytest.ini
demo/: thread_demo_gui.py
examples/: __init__.py  basic_usage.py  demo1.py  demo2.py  gui_demo_comparison.py
qthreadwithreturn/: __init__.py  qthread_pool_executor.py  qthread_with_return.py
tests/: conftest.py  test_comprehensive_coverage.py  test_focused_coverage.py  test_memory_and_leaks.py  test_multiple_callbacks.py  test_pool_callbacks.py  test_production_scenarios.py  test_shutdown_behaviors.py  test_stress_and_concurrency.py  test_thread_utils.py
